Fix content going out of bounds in Modal Add close button in Modal

--- a/packages/client/src/Components/Common/Modal/index.module.css
+++ b/packages/client/src/Components/Common/Modal/index.module.css
@@ -7,21 +7,25 @@
   }
 
   .contentWrapper {
-    @apply z-[99998] relative bg-neutral-100 p-4 rounded-md shadow-md max-h-[70vh];
+    @apply z-[99998] relative bg-neutral-100 rounded-md shadow-md max-h-[70vh];
     @apply dark:bg-neutral-800 dark:shadow-neutral-900;
   }
 
-  .content {
-    @apply p-2;
-  }
-
   .header {
-    @apply border-b-[1px];
+    @apply flex justify-between items-center border-b-[1px] p-2 h-[5vh];
     @apply dark:border-b-neutral-700;
 
     & h2 {
       @apply font-semibold p-1;
     }
+
+    & svg {
+      @apply w-6 h-6;
+    }
+  }
+
+  .content {
+    @apply p-2 max-h-[65vh] overflow-y-scroll;
   }
 
   .background {
